# codette

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
backend/: .dockerignore  .env.test  Dockerfile  README.md  pyproject.toml
backend/app/adapters/: local_task_run.py  storage.py  task_run.py
backend/app/adapters/repository/: invitation.py  problem.py  run.py  submission.py  submission_evaluation.py  submission_queue.py  user.py
backend/app/api/: dependencies.py  main.py
backend/app/api/handlers/: submission.py
backend/app/api/routes/: submission.py
backend/app/api/schemas/: submission.py
backend/app/api/v1/: router.py
backend/app/core/: bootstrap.py  context.py  db.py  logging.py  middleware.py  settings.py
backend/app/models/: __init__.py  base.py  invitation.py  problem.py  run.py  submission.py  submission_evaluation.py  submission_queue.py  user.py
backend/app/services/: auth.py  submission.py  token.py
backend/app/worker/: contracts.py  main.py  request_factory.py  sea.py
backend/migrations/: env.py
backend/migrations/versions/: 51ddc4342314_add_sea_models.py  a1b2c3d4e5f6_add_deleted_at_to_problems.py  b2c3d4e5f6a7_add_deleted_at_to_submissions.py  c3d4e5f6a7b8_add_function_signature_to_problems.py  d4e5f6a7b8c9_add_failure_fields_to_runs.py  e2bdb3fbed03_add_users_invitations_and_auth_columns.py
backend/scripts/: README.md  run-tests.sh  start-api-dev.sh  wait_for_dependencies.py
backend/scripts/dev/: run-tests.sh  seed_dev_data.py  start-api-dev.sh  start-worker-dev.sh  wait_for_dependencies.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_auth_endpoint.py  test_invitation_endpoint.py  test_problem_endpoint.py  test_queue_endpoint.py  test_run_endpoint.py  test_submission_endpoint.py
backend/tests/app/adapters/: realistic_task_run.py  (+2 more)
backend/tests/integration/: conftest.py  test_sea.py  test_sea_pipeline.py
backend/tests/services/: test_auth.py  test_password.py  test_submission.py  test_token.py
(+111 files in other folders)
